# arcface_tensorflow

./: Makefile  README.md  dockerfile  pyproject.toml
configs/: CASIA-maxpy-clean_align.yml
notebook/: visualize_data_augmentation.ipynb
src/: arcface.py  config_loader.py  dataset.py  eval.py  losses.py  model.py  train.py  train_flowers102.py  utils.py
tests/: test_arcface.py  test_model.py
