[tool.poetry]
name = "arcface_tensorflow"
version = "0.1.0"
description = ""
authors = ["Mamoru Miura <mamo3gr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "*"
bcolz = "*"
PyYAML = "*"
jupyter = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = { version = "*", allow-prereleases = true }
isort = {version = "*", extras = ["pyproject"]}
flake8 = "*"
pytest = "*"
pytest-cov = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
